@@ -2,9 +2,10 @@ Version 0.5.1
 --------------
 Change: Fresh new icon (the smaller 16x16 icon remains the same)
 Change: 'Notification Timeout' setting now defaults to 10 seconds (previously defaulted to Disabled).
-Bugfix: 'Enable Context Menu' option was not working.
-Bugfix: binsearch.info wasn't working.
+Bugfix: (Regression) 'Enable Context Menu' option was not working.
+Bugfix: (Regression) binsearch.info wasn't working.
 Bugfix: Renamed the display options check boxes in settings to mean the reverse of what they meant before (i.e. Keeping them checked actually enables nice display names).
+Bugfix: (Regression) 'Pause Queue' popup option was missing.
 
 Version 0.5.0
 --------------
